kubernetes/apps/tools/pentest-lab/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pentest-lab
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
