kubernetes/apps/tools/pentest-lab/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kali
  namespace: pentest-lab
spec:
  selector:
    app.kubernetes.io/name: kali
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
