kubernetes/apps/tools/pentest-lab/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kali-internal
  namespace: pentest-lab
spec:
  ingressClassName: internal
  rules:
    - host: kali-lab-internal.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kali
                port:
                  name: web
  tls:
    - hosts:
        - kali-lab-internal.${SECRET_DOMAIN}
