kubernetes/apps/tools/pentest-lab/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: pentest-lab
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
